--- a/src/android/wallet.gradle
+++ b/src/android/wallet.gradle
@@ -70,6 +70,9 @@ dependencies {
 }
 
 android {
+
+    useLibrary 'org.apache.http.legacy'
+
     packagingOptions {
         exclude "META-INF/NOTICE"
         exclude "META-INF/LICENSE"
@@ -82,6 +85,9 @@ android {
         javaMaxHeapSize "4g"
     }
 
+    aaptOptions {
+        cruncherEnabled = false
+    }
 }
 
 ext.postBuildExtras = {
